--- a/html_proto/public/index.html
+++ b/html_proto/public/index.html
@@ -10,7 +10,35 @@
       content="Koht, kus saad anonüümselt pakkuda või küsida nõu ja abi!"
     />
     <title>Teejuht</title>
+  
+    <style>
+      @font-face {
+    font-family: "Borel";
+    src: url("/fonts/Borel-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: "ABeeZee";
+    src: url("/fonts/ABeeZee-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+  }
+
+      body {
+        margin: 0;
+        padding: 0;
+        background-image: url("/background.jpg");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        min-height: 100vh;
+        font-family: "ABeeZee", sans-serif;
+      }
+    </style>
   </head>
+  
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
